appending articles to main page on click

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,5 @@
    	<div>
-   		<button>Load Articles</button>
-
+   		<button id="loadArticles">Load Articles</button>
    	</div>
 
     <div id="wrapper">
