--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Article Filler</title>
-    <script src="/assets/js/app.js"></script>
+    <!-- jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
+    
     <script src="/assets/js/app.js"></script>
   </head>
 <body>
     
     {{{ body }}}
+
 
 </body>
 </html>
