saving individual articles

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,3 +9,25 @@
       <div id="notes"></div>
     </div>
   
+
+    <!-- Modal -->
+	 <div class="modal fade" id="myModal" role="dialog">
+	    <div class="modal-dialog">
+	    
+	      <!-- Modal content-->
+	      <div class="modal-content">
+	        <div class="modal-header">
+	          <button type="button" class="close" data-dismiss="modal">&times;</button>
+	          <h2 class="modal-title"></h2>
+	        </div>
+	        <div id="previousNotes">
+	        </div>
+	        <div id="newNote">
+	        </div>
+	        <div class="modal-footer">
+	          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        </div>
+	      </div>
+	      
+	    </div>
+	 </div>
