--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,19 @@
-   	<div>
-   		<button id="loadArticles">Load Articles</button>
-   	</div>
+{{!-- <div>
+   	<button id="loadArticles">Load Articles</button>
+   	<button id="savedArticles">Saved Articles</button>
+</div> --}}
 
+<nav class="navbar navbar-inverse">
+  <ul class="nav navbar-nav">
+    <li><a href="" id="loadArticles">Load Articles</a></li>
+    <li><a href="/saved">Saved Articles</a></li>
+  </ul>
+</nav>
+  <div class="container">
     <div id="wrapper">
       <h1>Article Scraper</h1>
       <h2><i>Sports Articles</i></h2>
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
-  
-
-    <!-- Modal -->
-	 <div class="modal fade" id="myModal" role="dialog">
-	    <div class="modal-dialog">
-	    
-	      <!-- Modal content-->
-	      <div class="modal-content">
-	        <div class="modal-header">
-	          <button type="button" class="close" data-dismiss="modal">&times;</button>
-	          <h2 class="modal-title"></h2>
-	        </div>
-	        <div id="previousNotes">
-	        </div>
-	        <div id="newNote">
-	        </div>
-	        <div class="modal-footer">
-	          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        </div>
-	      </div>
-	      
-	    </div>
-	 </div>
+  </div>
