--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,20 @@
-{{!-- <div>
-   	<button id="loadArticles">Load Articles</button>
-   	<button id="savedArticles">Saved Articles</button>
-</div> --}}
-
 <nav class="navbar navbar-inverse">
   <ul class="nav navbar-nav">
     <li><a href="" id="loadArticles">Load Articles</a></li>
     <li><a href="/saved">Saved Articles</a></li>
   </ul>
 </nav>
+
   <div class="container">
-    <div id="wrapper">
+    <div class="jumbotron">
       <h1>Article Scraper</h1>
       <h2><i>Sports Articles</i></h2>
+    </div>
+
+    <div id="wrapper">
       <div id="articles"></div>
       <div id="notes"></div>
     </div>
   </div>
+
+
