--- a/views/savedArticles.handlebars
+++ b/views/savedArticles.handlebars
@@ -6,14 +6,17 @@
 </nav>
 
 <div class="container">
+	<div class="container">
+    	<div class="jumbotron">
+     	 	<h1>Article Scraper</h1>
+     	 	<h2><i>Your saved articles</i></h2>
+    	</div>
 	<div id="wrapper">
-      <h1>Article Scraper</h1>
-      <h2><i>Your saved articles</i></h2>
-      <div id="articles">
+      <div class="savedArticles" id="articles">
       	{{#each articles}}
       		<h3>{{ title }}</h3>
       		<h4>{{ body }}</h4>
-      		<h4>{{ link }}</h4>
+      		<a href="{{ link }}"><button class="btn btn-primary" target="_blank">See full article</button></a>
       	{{/each}}
       </div>
       <div id="notes"></div>
@@ -21,7 +24,7 @@
 </div>
 
   <!-- Modal -->
-	 <div class="modal fade" id="myModal" role="dialog">
+{{!-- 	 <div class="modal fade" id="myModal" role="dialog">
 	    <div class="modal-dialog">
 	    
 	      <!-- Modal content-->
@@ -40,4 +43,32 @@
 	      </div>
 	      
 	    </div>
-	 </div>
+	 </div> --}}
+
+<div id="noteHolder" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title"></h4>
+      </div>
+      <div class="modal-body">
+       <div class="existingNotes"></div>
+       <div class="newNote">
+       	<form>
+       		<div class="form-group">
+			  <label for="usr">new note</label>
+			  <textarea type="text" class="form-control note-body" style="width: 100%"></textarea>
+			</div>
+			<button class="btn btn-primary submit-note">Add Note</button>
+       	</form>
+       </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
