--- a/views/savedArticles.handlebars
+++ b/views/savedArticles.handlebars
@@ -17,6 +17,7 @@
       		<h3>{{ title }}</h3>
       		<h4>{{ body }}</h4>
       		<a href="{{ link }}"><button class="btn btn-primary" target="_blank">See full article</button></a>
+      		<button class="btn btn-primary articleNotes" data-id="{{_id}}">Add a note</button>
       	{{/each}}
       </div>
       <div id="notes"></div>
@@ -24,27 +25,6 @@
 </div>
 
   <!-- Modal -->
-{{!-- 	 <div class="modal fade" id="myModal" role="dialog">
-	    <div class="modal-dialog">
-	    
-	      <!-- Modal content-->
-	      <div class="modal-content">
-	        <div class="modal-header">
-	          <button type="button" class="close" data-dismiss="modal">&times;</button>
-	          <h2 class="modal-title"></h2>
-	        </div>
-	        <div id="previousNotes">
-	        </div>
-	        <div id="newNote">
-	        </div>
-	        <div class="modal-footer">
-	          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        </div>
-	      </div>
-	      
-	    </div>
-	 </div> --}}
-
 <div id="noteHolder" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <!-- Modal content-->
@@ -72,3 +52,4 @@
 
   </div>
 </div>
+
